# witra

./: .gitignore  CMakeLists.txt  CNAME  README.md  index.html  installer.iss  main.cpp
resources/: app-info.txt  resources.qrc
resources/styles/: main.qss
src/core/: Peer.cpp  Peer.h  PeerManager.cpp  PeerManager.h  TransferItem.cpp  TransferItem.h  TransferManager.cpp  TransferManager.h
src/network/: FileTransferClient.cpp  FileTransferClient.h  FileTransferServer.cpp  FileTransferServer.h  NetworkDiscovery.cpp  NetworkDiscovery.h  Protocol.h  TransferSession.cpp  TransferSession.h
src/ui/: ConnectionDialog.cpp  ConnectionDialog.h  LobbyPage.cpp  LobbyPage.h  MainWindow.cpp  MainWindow.h  PeerWidget.cpp  PeerWidget.h  TransferPage.cpp  TransferPage.h  TransferWidget.cpp  TransferWidget.h
